Update log for April 7, 2017

--- a/ezequiel_project_log/project_log.tex
+++ b/ezequiel_project_log/project_log.tex
@@ -285,4 +285,9 @@ KeyError: 'Unrecognized response packet with id byte \textbackslash x90'}
 \item Followed this \href{https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-adafruit-feather-m0-wifi-kit-arduino-get-started}{MS Azure} IoT tutorial of the Adafruit Feather M0.
 \end{itemize}
 
+\section{Friday -- April 7, 2017}
+\begin{itemize}
+\item The speaker we have is a 4$\Omega$ 2W speaker that can handle up to around 700 mA.
+\end{itemize}
+
 \end{document}
