--- a/bom/bom.tex
+++ b/bom/bom.tex
@@ -65,5 +65,6 @@ colorlinks,linkcolor=black,citecolor=violet,urlcolor=blue
     %\caption{Bill of materials.}
     \label{tab:bom}
 \end{table}
+Need to add cost of acrylic and audio amp
 
 \end{document}
