Update log for April 11, 2017

--- a/ezequiel_project_log/project_log.tex
+++ b/ezequiel_project_log/project_log.tex
@@ -290,4 +290,10 @@ KeyError: 'Unrecognized response packet with id byte \textbackslash x90'}
 \item The speaker we have is a 4$\Omega$ 2W speaker that can handle up to around 700 mA.
 \end{itemize}
 
+\section{Tuesday -- April 11, 2017}
+\begin{itemize}
+\item Worked vigorously to get the remote monitoring sketch to work.
+\item Updated the WiFi101 firmware of the Feather to version WINC1501 Model B (19.5.2)
+\end{itemize}
+
 \end{document}
