Go back to an earlier date and fix Feather setup instructions for Arduino

--- a/ezequiel_project_log/project_log.tex
+++ b/ezequiel_project_log/project_log.tex
@@ -76,7 +76,7 @@ colorlinks,linkcolor=blue,citecolor=violet,urlcolor=magenta
 	\item Download and install Arduino IDE v1.6.4+.
 	\item Go to \texttt{File} $\rightarrow$ \texttt{Preferences}. Type in \url{https://adafruit.github.io/arduino-board-index/package_adafruit_index.json} into the \textbf{Additional Boards Manager URLs} box.
 	\item Navigate to \texttt{Tools} $\rightarrow$ \texttt{Boards} $\rightarrow$ \texttt{Boards Manager}. Install \textbf{Arduino SAMD Boards} version 1.6.8
-	\item Install the \textbf{Adafruit SAMD} package.
+	\item Install the \textbf{Adafruit SAMD} package version 1.0.13.
 	\item Quit and reopen Arduino IDE. After restart, new boards will be listed on \texttt{Tools} $\rightarrow$ \texttt{Boards}. Select the appropriate board.
 	\item Install drivers (Windows only). Link: \url{https://github.com/adafruit/Adafruit_Windows_Drivers/releases/download/1.0.0.0/adafruit_drivers.exe}.
 	\end{enumerate}
